syntax = "proto2";

package com.tt.ocean.proto;

option java_package = "com.tt.ocean.proto";
option java_outer_classname = "ConfigProto";




message ConfigRequest{
    optional ConfigAuthReq      auth= 1;
    optional ConfigGetNodesReq  get_nodes= 2;
    optional ConfigSubscribeReq subscribe = 3;

}

message ConfigResponse{
    optional ConfigAuthRsp      auth = 1;
    optional ConfigGetNodesRsp  get_nodes= 2;
    optional ConfigNotifyNode   notify_node= 3;

}

message ConfigAuthReq {
    required string node_type = 1;
    required string auth_key = 2;
    required string auth_secret = 3;
    optional string service_ip = 4;
    optional int32  service_port = 5;
}



message ConfigAuthRsp{

    required int32 status = 2;

}

message ConfigGetNodesReq{
    required  string node_type = 1;
}

message ConfigSubscribeReq{
    required  string node_type = 1;
}

message ConfigNodeInfo{
    required  int32     version = 1;
    required  string    node_type = 2;
    required  int64     prs_id = 3;
    required  int32     piece_id = 4;
    required  string    addr = 5;
    required  int32     port = 6;
    optional  int32     conn_num = 7;

}


message ConfigGetNodesRsp{
    repeated  ConfigNodeInfo nodes = 1;
}


message ConfigNotifyNode{

    enum ConfigNotifyType{
        ONLINE = 1;
        OFFLINE = 2;
    }

    required    ConfigNotifyType        notify_type = 1;

    required  int32                     version = 2;
    required  string                    node_type = 3;
    required  int64                     prs_id = 4;
    required  int32                     piece_id = 5;
    required  string                    addr = 6;
    required  int32                     port = 7;
    optional  int32                     conn_num = 8;
}