syntax = "proto2";

package com.tt.ocean.proto;

option java_package = "com.tt.ocean.proto";
option java_outer_classname = "NodeProto";



message NodeRequest{
    optional NodeAuthReq      auth= 1;


}

message NodeResponse{
    optional NodeAuthRsp      auth = 1;


}

message NodeAuthReq {
    required string node_type = 1;
    required string auth_key = 2;
    required string auth_secret = 3;
    optional string service_ip = 4;
    optional int32  service_port = 5;
}

message NodeAuthRsp{

    required int32 status = 1;
    required string node_type = 2;

}
